Added link for js

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <footer>
       Coded by
       <a href="https://www.linkedin.com/in/angeliki-karkampasi-58341913b/"
-        >Angeliki Karkampasi</a
-      >
+        >Angeliki Karkampasi with 💟
+      </a>
       is open sourced on
       <a href="https://github.com/Angelikikark/My-Ouranos-App">GitHub</a> and
       hosted
