Added basic html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,23 @@
     <title>World Clock- Angeliki Karkampasi</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
 
+      <select>
+        <option value="">Select a city..</option>
+        <option value="">London..</option>
+
+        <option value="">Paris..</option>
+        <option value="">Greece..</option>
+      </select>
+
+      <div class="city">
+        <h2>Los Angeles</h2>
+        <div class="date">Austust 15th 2024</div>
+        <div class="time">1:55:16 AM</div>
+      </div>
+    </div>
     <footer>
       Coded by
       <a href="https://www.linkedin.com/in/angeliki-karkampasi-58341913b/"
