--- a/index.html
+++ b/index.html
@@ -19,9 +19,18 @@
       </select>
 
       <div class="city">
-        <h2>Los Angeles</h2>
-        <div class="date">Austust 15th 2024</div>
-        <div class="time">1:55:16 AM</div>
+        <div>
+          <h2>Los Angeles 🇺🇸</h2>
+          <div class="date">August 15th 2022</div>
+        </div>
+        <div class="time">1:48:15 <small> AM </small></div>
+      </div>
+      <div class="city">
+        <div>
+          <h2>Paris 🇫🇷</h2>
+          <div class="date">August 15th 2022</div>
+        </div>
+        <div class="time">1:48:15 <small> AM </small></div>
       </div>
     </div>
     <footer>
