Added home link button html and css

--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 
       <select id="city">
         <option value="">Select a city..</option>
+        <option value="current">My current location</option>
         <option value="Europe/London">London</option>
         <option value="America/New_York">New York</option>
         <option value="Pacific/Auckland">Auckland</option>
+        <option value="Europe/Greece">Greece</option>
+        <option value="Europe/Spain">Spain</option>
       </select>
 
       <div id="cities">
@@ -35,8 +38,8 @@
           <div class="time"></div>
         </div>
       </div>
+      <a href="index.html" class="home-link">Back to Homepage</a>
     </div>
-
     <footer>
       Coded by
       <a href="https://www.linkedin.com/in/angeliki-karkampasi-58341913b/"
