--- a/index.html
+++ b/index.html
@@ -46,12 +46,9 @@
         >Angeliki Karkampasi with 💟
       </a>
       is open sourced on
-      <a href="https://github.com/Angelikikark/My-Ouranos-App">GitHub</a> and
+      <a href="https://github.com/Angelikikark/World-Clock">GitHub</a> and
       hosted
-      <a
-        href="file:///C:/Users/sgxak/Documents/GitHub/My-Ouranos-App/index.html"
-        >on Netlify</a
-      >
+      <a href="https://world-clock-add-on-myproject.netlify.app/">on Netlify</a>
     </footer>
     <script src="javascript/index.js"></script>
   </body>
